# lakesync

./: .gitignore  README.md  SOURCE_MAPPING_CONFIG_1.csv  SOURCE_MAPPING_CONFIG_db.csv  api_gateway.py  run_lakesync.bat
Conversion_ABAP/: README.md
Conversion_ABAP/backend/: Main.py  conversion_memory.jsonl  convert_folder.py  flask_app.py  pyproject.toml
Conversion_ABAP/backend/app/core/: config.py
Conversion_ABAP/backend/app/schemas/: conversion.py
Conversion_ABAP/backend/app/services/: abap_parser.py  conversion_memory.py  cortex_engine.py  ingestion.py  local_sql_converter.py  metadata.py  pattern_library.py  rule_engine.py  snowflake_connector.py
Conversion_ABAP/backend/output/ui_runs/02be56ba01a84254b646e15998b23a66/input/: DML_test.txt
Conversion_ABAP/backend/output/ui_runs/02be56ba01a84254b646e15998b23a66/output/: DML_test.json  DML_test.sql
Conversion_ABAP/backend/output/ui_runs/03358f596f344a6998ab458daa6e9ffd/output/: Test1.json
Conversion_ABAP/backend/output/ui_runs/0563f19ba82e403fbd80704dff356cc3/output/: DDL_test.json
Conversion_ABAP/backend/output/ui_runs/0a0181bd3247495a8fc14753dbdf3b21/input/: DDL_test.txt
Conversion_ABAP/backend/output/ui_runs/0a0181bd3247495a8fc14753dbdf3b21/output/: DDL_test.json
Conversion_ABAP/backend/sample_abap/: ddl_02_sales_order_header.abap  ddl_03_cds_sales_analysis.abap  ddl_04_fi_doc_line_items.abap  ddl_05_cds_union_financial_positions.abap
Conversion_ABAP/backend/tests/: test_conversion_memory.py  test_convert_folder.py  test_cortex_engine.py  test_local_sql_converter.py  test_parser_and_rules.py
(+309 files in other folders)
