[project]
name = "abap-snowflake-converter"
version = "0.1.0"
description = "Enterprise ABAP to Snowflake SQL conversion platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "Flask>=2.2.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "sqlalchemy>=2.0.30",
  "snowflake-connector-python>=3.10.0",
  "confluent-kafka>=2.4.0",
  "redis>=5.0.4",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "opentelemetry-api>=1.25.0",
  "opentelemetry-sdk>=1.25.0",
  "opentelemetry-instrumentation-fastapi>=0.46b0",
  "prometheus-fastapi-instrumentator>=7.0.0",
  "python-multipart>=0.0.9",
  "gunicorn>=23.0.0"
]

[project.scripts]
abap-convert-folder = "convert_folder:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "httpx>=0.27.0",
  "ruff>=0.4.4"
]
orchestration = [
  "prefect>=2.19.0,<3.0.0"
]
prod = [
  "prefect>=2.19.0,<3.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools]
packages = ["app"]
